# mini_rust_websocket_server

./: .dockerignore  Cargo.toml  Dockerfile  README.md
remote_video_stream_test_pages/receiver/: receiver.html  receiver.js
remote_video_stream_test_pages/sender/: sender.html  sender.js
src/: main.rs  websocket.rs
src/websocket/: data_transfer.rs  handler.rs  webrtc.rs
