[package]
name = "rust_websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
futures-util = "0.3.29"
hyper = { version = "0.14.27", features = ["full"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
mysql = "24.0.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
